# rs_nps_rffe_rsbp

./: .gitignore  CMakeLists.txt  README.md
config/: afe_dac_config.json
device_tree/overlays/: CMakeLists.txt  afe11612-spi0.dts  apio16-overlay.dts  apio16-spi1.dts  rffe-overlay.dts
front_end/afe11612_web_app/: afe11612.py  server.py
front_end/afe11612_web_app/static/: app.js  index.html  style.css
kernel/drivers/: CMakeLists.txt
kernel/drivers/afe11612/: CMakeLists.txt  Makefile  afe11612.c
kernel/drivers/apio16/: CMakeLists.txt  Makefile  apio16.c
scripts/: build_all.sh  clean_build.sh  install_drivers.sh  load_dac_config.sh  manual_driver_bind_spi.sh  run_web_server.sh
user_space/cli/: CMakeLists.txt
user_space/cli/afe11612/: CMakeLists.txt  afe11612_cli.c
user_space/cli/apio16/: CMakeLists.txt  apio16_cli.c
user_space/gui/afe11612/: afe11612_gui.py
user_space/gui/apio16/: apio16_gui.py
user_space/lib/: CMakeLists.txt
user_space/lib/afe11612/: CMakeLists.txt
user_space/lib/afe11612/include/: libafe11612.h
user_space/lib/afe11612/src/: libafe11612.c
user_space/lib/apio16/: CMakeLists.txt
user_space/lib/apio16/include/: libapio16.h
user_space/lib/apio16/src/: libapio16.c
user_space/lib/cjson/: CMakeLists.txt
